// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureService #addSignture 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "314000",
    "id": "c61a49b192d82f32f67dd1695c0f664b2d233b818fb5055be199ed9e4e717741",
    "moduleID": 2,
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "",
      "281c7ea91c6afbc3898ce1420cfc60a4eb7dac201e1aa8ce2c1da1a4c04c4f14377f906611a9fb0a50886a4cc53a421d3cde9fd09dbfe721e02336c63e50b508",
    ],
  },
  "decimals": 8,
  "identifier": "c61a49b192d82f32f67dd1695c0f664b2d233b818fb5055be199ed9e4e717741",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": 314000n,
    "id": Object {
      "data": Array [
        198,
        26,
        73,
        177,
        146,
        216,
        47,
        50,
        246,
        125,
        209,
        105,
        92,
        15,
        102,
        75,
        45,
        35,
        59,
        129,
        143,
        181,
        5,
        91,
        225,
        153,
        237,
        158,
        78,
        113,
        119,
        65,
      ],
      "type": "Buffer",
    },
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "members": Array [
        Object {
          "address": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
          "isMandatory": true,
          "publicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        },
        Object {
          "address": "lskn2de9mo9z3g9jvbpj4yjn84vrvjzcn5c5mon7a",
          "isMandatory": true,
          "publicKey": "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        },
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": 0n,
    "senderPublicKey": Object {
      "data": Array [
        172,
        87,
        72,
        150,
        200,
        70,
        181,
        148,
        119,
        169,
        17,
        91,
        149,
        37,
        99,
        147,
        140,
        72,
        208,
        9,
        107,
        132,
        132,
        108,
        11,
        99,
        74,
        98,
        30,
        23,
        116,
        237,
      ],
      "type": "Buffer",
    },
    "signatures": Array [
      Object {
        "data": Array [],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          40,
          28,
          126,
          169,
          28,
          106,
          251,
          195,
          137,
          140,
          225,
          66,
          12,
          252,
          96,
          164,
          235,
          125,
          172,
          32,
          30,
          26,
          168,
          206,
          44,
          29,
          161,
          164,
          192,
          76,
          79,
          20,
          55,
          127,
          144,
          102,
          17,
          169,
          251,
          10,
          80,
          136,
          106,
          76,
          197,
          58,
          66,
          29,
          60,
          222,
          159,
          208,
          157,
          191,
          231,
          33,
          224,
          35,
          54,
          198,
          62,
          80,
          181,
          8,
        ],
        "type": "Buffer",
      },
    ],
  },
}
`;

exports[`MultiSignatureService #addSignture 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "314000",
    "id": "634e1f197f106d372b0d28c2817de5d3da2fc88b9f1e9fc9b8fd9058196d361a",
    "moduleID": 2,
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "9eee70cbbd4d8cf58e087ac46d50ec2d9c86d5fa77b37b67fef2b585211819c41ca20d0bfa518c9cc33fbf5cb2d9626759c6b185a90c34693db4c59a34a39909",
      "281c7ea91c6afbc3898ce1420cfc60a4eb7dac201e1aa8ce2c1da1a4c04c4f14377f906611a9fb0a50886a4cc53a421d3cde9fd09dbfe721e02336c63e50b508",
    ],
  },
  "decimals": 8,
  "identifier": "634e1f197f106d372b0d28c2817de5d3da2fc88b9f1e9fc9b8fd9058196d361a",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": 314000n,
    "id": Object {
      "data": Array [
        99,
        78,
        31,
        25,
        127,
        16,
        109,
        55,
        43,
        13,
        40,
        194,
        129,
        125,
        229,
        211,
        218,
        47,
        200,
        139,
        159,
        30,
        159,
        201,
        184,
        253,
        144,
        88,
        25,
        109,
        54,
        26,
      ],
      "type": "Buffer",
    },
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "members": Array [
        Object {
          "address": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
          "isMandatory": true,
          "publicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        },
        Object {
          "address": "lskn2de9mo9z3g9jvbpj4yjn84vrvjzcn5c5mon7a",
          "isMandatory": true,
          "publicKey": "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        },
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": 0n,
    "senderPublicKey": Object {
      "data": Array [
        172,
        87,
        72,
        150,
        200,
        70,
        181,
        148,
        119,
        169,
        17,
        91,
        149,
        37,
        99,
        147,
        140,
        72,
        208,
        9,
        107,
        132,
        132,
        108,
        11,
        99,
        74,
        98,
        30,
        23,
        116,
        237,
      ],
      "type": "Buffer",
    },
    "signatures": Array [
      Object {
        "data": Array [
          158,
          238,
          112,
          203,
          189,
          77,
          140,
          245,
          142,
          8,
          122,
          196,
          109,
          80,
          236,
          45,
          156,
          134,
          213,
          250,
          119,
          179,
          123,
          103,
          254,
          242,
          181,
          133,
          33,
          24,
          25,
          196,
          28,
          162,
          13,
          11,
          250,
          81,
          140,
          156,
          195,
          63,
          191,
          92,
          178,
          217,
          98,
          103,
          89,
          198,
          177,
          133,
          169,
          12,
          52,
          105,
          61,
          180,
          197,
          154,
          52,
          163,
          153,
          9,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          40,
          28,
          126,
          169,
          28,
          106,
          251,
          195,
          137,
          140,
          225,
          66,
          12,
          252,
          96,
          164,
          235,
          125,
          172,
          32,
          30,
          26,
          168,
          206,
          44,
          29,
          161,
          164,
          192,
          76,
          79,
          20,
          55,
          127,
          144,
          102,
          17,
          169,
          251,
          10,
          80,
          136,
          106,
          76,
          197,
          58,
          66,
          29,
          60,
          222,
          159,
          208,
          157,
          191,
          231,
          33,
          224,
          35,
          54,
          198,
          62,
          80,
          181,
          8,
        ],
        "type": "Buffer",
      },
    ],
  },
}
`;
